update the header
Update the background of the header

--- a/style.css
+++ b/style.css
@@ -15,10 +15,10 @@ body{
 	*/
 	
 .header{
-	padding: 5px;
-	background:#cccccc;
+	padding: 10px;
+	background:#fffba3;
 	
-}/* style by 
+}/* style by ChiehFang Chen
 	*/
 	
 .site-title{
